--- a/public/main_template.html
+++ b/public/main_template.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="style.css">
 	<head>
-		<style>
-			.log_info {
-				color: #00ff00;
-			}
-			.log_exception {
-				color: #ff0000;
-			}
-			.log_tagged {
-				color: #0000ff;
-			}
-		</style>
 		<title>Test</title>
 	</head>
-	<body lang="fr">
+	<body>
 	</body>
 </html>
